[package]
name = "rta-tierlist-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
shuttle-rocket = "0.52.0"
shuttle-runtime = "0.52.0"
tokio = "1.26.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.133"
mongodb = "3.1.1"
bson = "2.13.0"
